--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -25,11 +25,12 @@
     <bool name="config_voice_capable">false</bool>
 
     <!-- This device does not allow sms service. -->
-    <bool name="config_sms_capable">false</bool>
+    <bool name="config_sms_capable">true</bool>
 
     <bool name="config_showNavigationBar">false</bool>
 
     <string name="config_datause_iface">wlan0</string>
+    <string name="config_datause_iface">wwan0</string>
 
     <bool name="config_batterySdCardAccessibility">true</bool>
 
@@ -76,19 +77,21 @@
         <item>242</item>
         <item>255</item>
         <item>255</item>
+        <item>255</item>
     </integer-array>
 
     <!-- Array of output values for button backlight corresponding to the LUX values           in the config_autoBrightnessLevels array.  This array should have size one greater           than the size of the config_autoBrightnessLevels array.      -->
     <integer-array name="config_autoBrightnessButtonBacklightValues">  
-        <item>255</item>
-        <item>255</item>
-        <item>255</item>
-        <item>255</item>
-        <item>255</item>
-        <item>255</item>
-        <item>255</item>
-        <item>255</item>
-        <item>255</item>
+        <item>77</item>
+        <item>128</item>
+        <item>140</item>
+        <item>153</item>
+        <item>165</item>
+        <item>178</item>
+        <item>191</item>
+        <item>204</item>
+        <item>230</item>
+        <item>242</item>
         <item>255</item>
         <item>255</item>
         <item>255</item>
@@ -108,12 +111,14 @@
         <item>255</item>
         <item>255</item>
         <item>255</item>
+	<item>255</item>
     </integer-array>
 
 
     <string-array translatable="false" name="config_tether_usb_regexs">
 	    <item>"usb0"</item>
 	    <item>"rndis0</item>
+	    <item>"wwan0</item>
     </string-array>
     <string-array translatable="false" name="config_tether_wifi_regexs">
         <item>"wlan0"</item>
@@ -123,8 +128,10 @@
     </string-array>
 
    <integer-array translatable="false" name="config_tether_upstream_types">
-        <item>1</item>
+        <item>0</item>
+	<item>1</item>
         <item>7</item>
+	<item>9</item>
     </integer-array>
 <!-- not in AOSP JB
     <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
@@ -147,6 +154,11 @@
         <item>"wifi,1,1,1,-1,true"</item>
         <item>"bluetooth,7,7,0,-1,true"</item>
         <item>"ethernet,9,9,9,-1,true"</item>
+	<item>"mobile,0,0,0,-1,true"</item>
+	<item>"mobile_mms,2,0,2,60000,true"</item>
+	<item>"mobile_supl,3,0,2,60000,true"</item>
+	<item>"mobile_dun,4,0,3,60000,true"</item>
+	<item>"mobile_hipri,5,0,3,60000,true"</item>
         <item>"wifi_p2p,13,1,0,-1,true"</item>
     </string-array>
 
@@ -161,13 +173,4 @@
         <item>"7,1"</item>
         <item>"9,1"</item>
     </string-array>
-<!-- not in AOSP JB
-    <string-array name="shutdown_reboot_options" translatable="false">
-        <item>@string/reboot_reboot</item>
-    </string-array>
-
-    <string-array name="shutdown_reboot_actions" translatable="false">
-        <item></item>
-    </string-array>
--->
 </resources>
